--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>dongbaek</title>
   <link rel="manifest" href="manifest.json">
+  <script defer src="sql-wasm.js"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
